--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                 </div>
                             </div>
                             <div class="item-content-description top-down delay-4">
-                                In an accident, Stephen Strange, loses the ability to use his hands. He goes to visit the mysterious Ancient One to heal himself and becomes a great sorcerer.
+                                In an accident, Stephen Strange, loses the ability to use his hands. He goes to visit the mysterious lady Ancient One to heal himself and becomes a great sorcerer.
                             </div>
                             <div class="item-action top-down delay-6">
                                 <a href="https://youtu.be/Lt-U_t2pUHI" target="blank" class="btn btn-hover">
